--- a/NewModel2/prep_label_part3.ipynb
+++ b/NewModel2/prep_label_part3.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 3,
    "id": "4ccf9974-150b-459d-9304-2892179d24d7",
    "metadata": {},
    "outputs": [
@@ -154,7 +154,7 @@
        "[89260 rows x 4 columns]"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -171,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 4,
    "id": "0b41b520-2f2b-4f27-9f12-80a74638839e",
    "metadata": {},
    "outputs": [],
@@ -191,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 5,
    "id": "6c7445b0-fa11-4603-ab57-277d1a398f38",
    "metadata": {},
    "outputs": [],
@@ -204,7 +204,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 6,
    "id": "f144d280-ab83-426f-915e-ea3b5954488d",
    "metadata": {},
    "outputs": [
@@ -543,7 +543,7 @@
        "[10245 rows x 17 columns]"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -554,7 +554,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 7,
    "id": "5c24f601-19de-410b-afcd-8023ec12db22",
    "metadata": {},
    "outputs": [
@@ -967,7 +967,7 @@
        "[6458 rows x 103 columns]"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -978,7 +978,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 8,
    "id": "1a9f4adc-2f38-4fb4-836d-3e9cbfff4e1f",
    "metadata": {},
    "outputs": [],
@@ -988,7 +988,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 9,
    "id": "e1add385-ea6d-407e-9f09-3aa3e4014fc0",
    "metadata": {},
    "outputs": [],
@@ -999,9 +999,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:base] *",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "conda-base-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1013,7 +1013,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.5"
+   "version": "3.13.7"
   }
  },
  "nbformat": 4,
