--- a/NewModel2/prep_data_part1.ipynb
+++ b/NewModel2/prep_data_part1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 33,
    "id": "e542cd12-e6ed-47b9-a416-6cc09550c7b0",
    "metadata": {},
    "outputs": [],
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 34,
    "id": "f74e3811-5504-49ed-8612-4ebbbd23044e",
    "metadata": {},
    "outputs": [],
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 35,
    "id": "b85a78d9-da37-4609-8ebe-41e359829811",
    "metadata": {},
    "outputs": [],
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 36,
    "id": "f6326b31-b7cc-419f-8863-bfaaf2d97859",
    "metadata": {},
    "outputs": [],
@@ -140,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 37,
    "id": "91f06530-ff2c-4150-97db-b3f7bc8fe749",
    "metadata": {},
    "outputs": [],
@@ -199,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 38,
    "id": "c366717b-51b7-4c2a-bc11-c9f0dbdfd6b5",
    "metadata": {},
    "outputs": [],
@@ -211,7 +211,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 39,
    "id": "1762fccf-3565-46d7-965d-32e9ba959a34",
    "metadata": {},
    "outputs": [],
@@ -225,7 +225,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 40,
    "id": "aa844a6f-7598-4f75-9817-f91a73892e1e",
    "metadata": {},
    "outputs": [],
@@ -236,7 +236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 41,
    "id": "74bfc11d-3281-4497-aac6-2e5de9538745",
    "metadata": {
     "scrolled": true
@@ -381,7 +381,7 @@
        "[107844 rows x 5 columns]"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -392,7 +392,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 91,
+   "execution_count": 42,
    "id": "90f1adde-2641-4b2d-a0d6-61025c09fc2e",
    "metadata": {},
    "outputs": [],
@@ -402,7 +402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 43,
    "id": "22ab4b07-01a0-4814-8154-9bce9082dc8d",
    "metadata": {},
    "outputs": [],
@@ -412,7 +412,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 44,
    "id": "e737038f-542f-4960-96a6-81a7302ca207",
    "metadata": {},
    "outputs": [],
@@ -422,7 +422,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 45,
    "id": "1accd973-ea7e-4793-9e6e-230de2c60593",
    "metadata": {},
    "outputs": [],
@@ -432,29 +432,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": 46,
    "id": "b310debe-a7c3-4ff9-899d-f0d998032a80",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/var/folders/t8/xyzxk7gn6yj4rb_n35rpd3z40000gn/T/ipykernel_2017/3174320479.py:1: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  yield_crop['area'] = yield_crop['area'].str.replace(' ', '_')\n",
-      "/var/folders/t8/xyzxk7gn6yj4rb_n35rpd3z40000gn/T/ipykernel_2017/3174320479.py:2: SettingWithCopyWarning: \n",
-      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
-      "Try using .loc[row_indexer,col_indexer] = value instead\n",
-      "\n",
-      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
-      "  yield_crop['year'] = yield_crop['year'].map(lambda x: date(int(x), 12, 31))\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "yield_crop['area'] = yield_crop['area'].str.replace(' ', '_')\n",
     "yield_crop['year'] = yield_crop['year'].map(lambda x: date(int(x), 12, 31))\n"
@@ -462,7 +443,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 47,
    "id": "9d2a54f2-766b-4bfd-8a75-38c10a3d319b",
    "metadata": {},
    "outputs": [],
@@ -480,7 +461,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 48,
    "id": "50780620-194b-4111-b93b-7b82773de94c",
    "metadata": {},
    "outputs": [
@@ -611,7 +592,7 @@
        "[89260 rows x 4 columns]"
       ]
      },
-     "execution_count": 106,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -631,9 +612,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [conda env:base] *",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "conda-base-py"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -645,7 +626,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.5"
+   "version": "3.13.7"
   }
  },
  "nbformat": 4,
