--- a/Final/Part_1_DataPrep.ipynb
+++ b/Final/Part_1_DataPrep.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -121,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -179,7 +179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -246,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -258,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -272,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -283,7 +283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -425,7 +425,7 @@
        "[107844 rows x 5 columns]"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -445,12 +445,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Load raw yield data\n",
-    "yield_crop = pd.read_csv('Data/yield final.csv')\n",
+    "yield_crop = pd.read_csv('Data/yield_final.csv')\n",
     "\n",
     "# Select relevant columns\n",
     "yield_crop = yield_crop[['Area', 'Item', 'Year', 'Yield (kg/ha)']]\n",
@@ -461,7 +461,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -474,7 +474,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -484,7 +484,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -614,7 +614,7 @@
        "[89260 rows x 4 columns]"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -622,6 +622,97 @@
    "source": [
     "# Display the result\n",
     "yield_crop"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b809416b",
+   "metadata": {},
+   "source": [
+    "### 5. Process Pesticides & Fertilizer"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "0850559e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Shape: (14977, 4)\n",
+      "          area        year  pesticides  fertilizer\n",
+      "0  Afghanistan  1970-12-31         NaN    2.465057\n",
+      "1  Afghanistan  1971-12-31         NaN    2.594937\n",
+      "2  Afghanistan  1972-12-31         NaN    3.680152\n",
+      "3  Afghanistan  1973-12-31         NaN    3.109987\n",
+      "4  Afghanistan  1974-12-31         NaN    4.285714\n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "from datetime import date\n",
+    "\n",
+    "# 1. Load the datasets\n",
+    "pesticides_df = pd.read_csv('Data/pesticides.csv')\n",
+    "fertilizer_df = pd.read_csv('Data/fertilizer.csv')\n",
+    "\n",
+    "# 2. Merge them on 'Area' and 'Year'\n",
+    "# Using outer join to keep all records from both files\n",
+    "farming_df = pd.merge(pesticides_df, fertilizer_df, on=['Area', 'Year'], how='outer')\n",
+    "\n",
+    "# 3. Define the renaming dictionary based on your standard list\n",
+    "area_mapping = {\n",
+    "    \"Bolivia\": \"Bolivia (Plurinational State of)\",\n",
+    "    \"Congo, Dem. Rep.\": \"Democratic Republic of the Congo\",\n",
+    "    \"Congo, Rep.\": \"Congo\",\n",
+    "    \"Cote d'Ivoire\": \"Côte d'Ivoire\",\n",
+    "    \"Gambia, The\": \"Gambia\",\n",
+    "    \"Hong Kong SAR, China\": \"China, Hong Kong SAR\",\n",
+    "    \"Iran, Islamic Rep.\": \"Iran (Islamic Republic of)\",\n",
+    "    \"Korea, Dem. People's Rep.\": \"Democratic People's Republic of Korea\",\n",
+    "    \"Korea, Rep.\": \"Republic of Korea\",\n",
+    "    \"Kyrgyz Republic\": \"Kyrgyzstan\",\n",
+    "    \"Lao PDR\": \"Lao People's Democratic Republic\",\n",
+    "    \"Micronesia, Fed. Sts.\": \"Micronesia (Federated States of)\",\n",
+    "    \"Moldova\": \"Republic of Moldova\",\n",
+    "    \"Netherlands\": \"Netherlands (Kingdom of the)\",\n",
+    "    \"St. Kitts and Nevis\": \"Saint Kitts and Nevis\",\n",
+    "    \"St. Lucia\": \"Saint Lucia\",\n",
+    "    \"St. Vincent and the Grenadines\": \"Saint Vincent and the Grenadines\",\n",
+    "    \"Slovak Republic\": \"Slovakia\",\n",
+    "    \"Taiwan, China\": \"China, Taiwan Province of\",\n",
+    "    \"Tanzania\": \"United Republic of Tanzania\",\n",
+    "    \"Turkey\": \"Türkiye\",\n",
+    "    \"Turkiye\": \"Türkiye\",\n",
+    "    \"United Kingdom\": \"United Kingdom of Great Britain and Northern Ireland\",\n",
+    "    \"United States\": \"United States of America\",\n",
+    "    \"Venezuela, RB\": \"Venezuela (Bolivarian Republic of)\",\n",
+    "    \"West Bank and Gaza\": \"Palestine\",\n",
+    "    \"Yemen, Rep.\": \"Yemen\"\n",
+    "}\n",
+    "\n",
+    "# 4. Apply the renaming\n",
+    "farming_df['Area'] = farming_df['Area'].replace(area_mapping)\n",
+    "\n",
+    "# 5. Convert Year to a full date (set to end of year)\n",
+    "# Drop rows with missing years (if any) and ensure integer type\n",
+    "farming_df = farming_df.dropna(subset=['Year'])\n",
+    "farming_df['Year'] = farming_df['Year'].astype(int)\n",
+    "farming_df['Year'] = farming_df['Year'].map(lambda x: date(int(x), 12, 31))\n",
+    "\n",
+    "# 6. Standardize column names to lowercase\n",
+    "farming_df.columns = farming_df.columns.str.lower()\n",
+    "\n",
+    "# 7. Save to Parquet\n",
+    "farming_df.to_parquet('Parquet/farming_df.parquet', index=False)\n",
+    "\n",
+    "# Verification\n",
+    "print(\"Shape:\", farming_df.shape)\n",
+    "print(farming_df.head())"
    ]
   }
  ],
