--- a/Final/Part_4_PrepLabel.ipynb
+++ b/Final/Part_4_PrepLabel.ipynb
@@ -6,16 +6,19 @@
    "source": [
     "# Label Preparation and Final Dataset Creation (Part 4)\n",
     "\n",
-    "## Overview\n",
-    "This notebook focuses on preparing the target variables (Labels) for the machine learning model. The steps include:\n",
-    "1.  **Label Formatting:** Cleaning and transforming crop yield data into a \"wide\" format where each crop type represents a distinct column (Target).\n",
-    "2.  **Data Integration:** Merging the prepared Labels with the Features (X) created in Part 3.\n",
-    "3.  **Final Export:** Saving the consolidated dataset `XY_version1.parquet` for modeling."
+    "## Objective\n",
+    "This notebook handles the final piece of the puzzle: the \"Labels\" (Target Variables). In Part 3, we built the features (inputs). Now, we need to structure the crop yield data so the model knows what to predict.\n",
+    "\n",
+    "**Key Steps:**\n",
+    "1.  **Load Data:** Import the features from Part 3 and the raw yield data.\n",
+    "2.  **Clean & Pivot:** Convert the yield data from \"long\" format (rows) to \"wide\" format (columns).\n",
+    "3.  **Merge:** Combine the Features (X) and Labels (Y) into one final dataset.\n",
+    "4.  **Save:** Export the ready-to-use dataset as `XY_v2.parquet`."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,13 +30,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 1. Load Features (X) and Raw Labels\n",
-    "We load the feature set created in the previous step and the raw yield data."
+    "### 1. Load Features and Raw Labels\n",
+    "We import our feature set (`x_features_v2.parquet`) and the raw crop yield data (`label_yield.parquet`). The raw yield data is currently in a \"long\" format, which means different crops are stacked in rows."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -48,13 +51,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 2. Standardize Item Names\n",
-    "To ensure accurate pivoting and merging, we sanitize the crop names by removing non-alphanumeric characters, replacing spaces with underscores, and converting to lowercase."
+    "### 2. Standardize Crop Names\n",
+    "Machine learning models prefer clean, consistent names. We process the `item` column to remove special characters and spaces, converting names like \"Maize (corn)\" to `maize_corn`. This prevents errors during column creation."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -133,7 +136,7 @@
        "4  Afghanistan  maize_corn  1974-12-31  1617.0"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -150,13 +153,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 3. Pivot Yield Data (Create Y)\n",
-    "The dataset is currently in a \"long\" format (one row per crop-year). We pivot this to a \"wide\" format where each crop becomes a separate column. This structure allows us to model specific crops or multi-output targets."
+    "### 3. Create Target Columns (Pivoting)\n",
+    "We need a separate column for each crop so we can predict them individually.\n",
+    "* **Current Format (Long):** One row per crop per year.\n",
+    "* **New Format (Wide):** One row per year, with columns like `Y_rice`, `Y_wheat`, `Y_maize`.\n",
+    "\n",
+    "We use the `pivot_table` function to transform the data structure."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -176,12 +183,12 @@
    "metadata": {},
    "source": [
     "### 4. Rename Columns\n",
-    "We prefix the crop columns with `Y_` to clearly distinguish them from feature columns in the final dataset."
+    "To avoid confusion between our *features* (inputs) and our *targets* (outputs), we add a prefix `Y_` to all the new crop columns. For example, the target for Rice becomes `Y_rice`."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -359,7 +366,7 @@
        "4           NaN       37272.7      3437.5            NaN      NaN  "
       ]
      },
-     "execution_count": 32,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -384,12 +391,12 @@
    "metadata": {},
    "source": [
     "### 5. Merge Features and Labels\n",
-    "We perform an inner join between the Feature set (X) and the Label set (Y) based on Year and Area to create the final analytical base table."
+    "Now we combine everything. We perform an **inner join** between our Feature table (X) and our Label table (Y) based on `year` and `area`. This ensures every row in our final dataset has both input features and a target value to learn from."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -408,8 +415,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 6. Save Final Dataset\n",
+    "We export the merged dataframe to `XY_v2.parquet`. This file contains everything needed to train the model in the next step."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -419,7 +434,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -2829,7 +2844,7 @@
        "5837           NaN       56512.6     22969.6        17446.3    701.0  "
       ]
      },
-     "execution_count": 35,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2846,7 +2861,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv-1 (3.9.6)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -2860,7 +2875,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "version": "3.12.10"
   }
  },
  "nbformat": 4,
