--- a/Final/Part_1_DataPrep.ipynb
+++ b/Final/Part_1_DataPrep.ipynb
@@ -7,23 +7,20 @@
     "# Data Preprocessing (Part 1)\n",
     "\n",
     "## Objective\n",
-    "This notebook cleans and prepares two main datasets:\n",
-    "1. **Weather Data:** Rainfall, Solar Radiation, and Temperature (merged into `nasa_df.parquet`).\n",
-    "2. **Crop Yield Data:** Agricultural yield statistics (saved as `label_yield.parquet`).\n",
+    "The goal of this notebook is to clean and prepare the raw data for our analysis. We are working with three main data sources:\n",
+    "1.  **Weather Data:** Rainfall, Solar Radiation, and Temperature.\n",
+    "2.  **Crop Yield Data:** Agricultural output (our target variable).\n",
+    "3.  **Farming Inputs:** Pesticide and Fertilizer usage.\n",
     "\n",
-    "The goal is to convert \"wide\" data (months as columns) into \"long\" format (rows for every month) and format the dates correctly."
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### 1. Setup and Library Imports"
+    "We will convert the data from \"wide\" format (where months are columns) to \"long\" format (where each row represents a specific date) and standardize the country names and dates.\n",
+    "\n",
+    "### 1. Setup and Library Imports\n",
+    "We import the necessary libraries to handle dataframes, mathematical operations, and file paths."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,8 +31,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "2988268d",
+   "metadata": {},
+   "source": [
+    "### 2. Locate Raw Data Files\n",
+    "We list all the CSV files located in the precipitation, solar radiation, and temperature folders. We will loop through these lists later to process every file."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,20 +55,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 2. Define Data Cleaning Functions\n",
+    "### 3. Define Data Cleaning Functions\n",
     "\n",
-    "We define three functions to handle precipitation, solar, and temperature files. \n",
+    "We define three functions to handle the specific formatting of the weather files. Since the raw data formats are similar, the logic for all three functions is consistent:\n",
     "\n",
-    "**Logic for all functions:**\n",
-    "1. Read the CSV (skip the first 10 header rows).\n",
-    "2. Melt the data (move months from columns to rows).\n",
-    "3. Clean month names and convert to date objects.\n",
-    "4. Sort and return the clean DataFrame."
+    "1.  **Read the file:** Load the CSV and skip the header rows.\n",
+    "2.  **Extract Country:** Get the country name directly from the filename.\n",
+    "3.  **Reshape Data:** Convert the monthly columns (Jan-Dec) into rows using the `melt` function.\n",
+    "4.  **Clean Dates:** Convert month names to numbers and create a standard Date object.\n",
+    "5.  **Handle Missing Values:** Replace `-999` (error code) with `NaN` (Not a Number)."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -121,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -179,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 38,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -240,13 +246,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 3. Process and Merge Weather Data\n",
-    "We now apply the functions to all files and merge them into a single dataset."
+    "### 4. Process and Merge Weather Data\n",
+    "Now that our functions are defined, we apply them to all the files in our lists. We then combine (concatenate) the results into three main dataframes: one for rain, one for solar radiation, and one for temperature."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -257,8 +263,17 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "42d14d1c",
+   "metadata": {},
+   "source": [
+    "### 5. Create Final Weather Dataset\n",
+    "We merge the three weather datasets into a single dataframe called `nasa_df`. We join them based on `year`, `area`, `date`, and `month` to ensure the rows align correctly. Finally, we save this clean dataset as a Parquet file."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -272,7 +287,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -283,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -425,7 +440,7 @@
        "[107844 rows x 5 columns]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -439,13 +454,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 4. Process Crop Yield Data\n",
-    "Here we load the crop yield labels, rename columns for consistency, and fix the date format."
+    "### 6. Process Crop Yield Data\n",
+    "In this section, we prepare the target variable (crop yield).\n",
+    "1.  We load the raw CSV file.\n",
+    "2.  We clean the column names for consistency.\n",
+    "3.  We standardize the `Area` names (replacing spaces with underscores).\n",
+    "4.  We format the `Year` column to be a full date object (set to December 31st of that year)."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 43,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -461,7 +480,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -474,7 +493,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -484,7 +503,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [
     {
@@ -614,7 +633,7 @@
        "[89260 rows x 4 columns]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -629,12 +648,20 @@
    "id": "b809416b",
    "metadata": {},
    "source": [
-    "### 5. Process Pesticides & Fertilizer"
+    "### 7. Process Pesticides & Fertilizers\n",
+    "We incorporate data on farming inputs, which are key features for our model.\n",
+    "\n",
+    "**Steps taken:**\n",
+    "1.  **Load Data:** Read the pesticide and fertilizer CSV files.\n",
+    "2.  **Merge:** Combine them into one dataframe based on Country and Year.\n",
+    "3.  **Standardize Country Names:** The raw data uses different spellings for countries (e.g., \"Turkey\" vs. \"Turkiye\"). We apply a dictionary mapping to ensure these names match our other datasets.\n",
+    "4.  **Format Dates:** Convert the year into a standardized date format.\n",
+    "5.  **Save:** Export the final cleaned dataframe to Parquet."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 47,
    "id": "0850559e",
    "metadata": {},
    "outputs": [
@@ -718,7 +745,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv-1 (3.9.6)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -732,7 +759,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.6"
+   "version": "3.12.10"
   }
  },
  "nbformat": 4,
