--- a/NewModel2/lstm_xy_cleaned_lstm.ipynb
+++ b/NewModel2/lstm_xy_cleaned_lstm.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "939d0029",
+   "id": "01cf2995",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,6 +15,7 @@
     "from sklearn.preprocessing import StandardScaler\n",
     "from sklearn.metrics import mean_squared_error, r2_score\n",
     "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.impute import SimpleImputer\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
     "# Optional: Optuna for hyperparameter tuning\n",
@@ -32,79 +33,112 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1f21a9c1",
+   "id": "7e07ae98",
    "metadata": {},
    "source": [
-    "# LSTM Regression for Y_rice\n",
+    "# LSTM Regression for **Y_rice** with NaN Cleaning\n",
     "\n",
-    "This notebook trains an LSTM model (PyTorch) on tabular data with target **Y_rice**, \n",
-    "adds prediction vs. true plots, and (optionally) performs Optuna hyperparameter tuning.\n",
+    "This notebook:\n",
     "\n",
-    "> 🔧 **Note:** Replace the data-loading part below with your actual dataset if needed, but keep the variables `X_train_scaled`, `X_val_scaled`, `X_test_scaled`, `y_train`, `y_val`, `y_test` in the same format.\n"
+    "1. Loads your dataset from `xy_cleaned.csv`\n",
+    "2. **Cleans NaNs**:\n",
+    "   - Drops rows where `Y_rice` (target) is missing  \n",
+    "   - Drops feature columns with more than 50% missing values  \n",
+    "   - Imputes remaining NaNs in features with the **median**\n",
+    "3. Splits data into **train / validation / test** with sizes `3449 / 570 / 570`\n",
+    "4. Scales features using `StandardScaler`\n",
+    "5. Trains an **LSTM regression** model in PyTorch\n",
+    "6. Plots training curves and **True vs Predicted** scatter\n",
+    "7. (Optionally) runs **Optuna** hyperparameter tuning and compares performance.\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8fc0e9c0",
+   "id": "acc88943",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# === CONFIG ===\n",
-    "RANDOM_STATE = 42\n",
-    "VAL_SIZE     = 0.15\n",
-    "TEST_SIZE    = 0.15\n",
-    "BATCH_SIZE   = 64\n",
+    "# === DATA LOADING & CLEANING ===\n",
     "\n",
-    "# === DATA LOADING (EXAMPLE) ===\n",
-    "# TODO: Replace this section with your own data-loading code if you already prepared\n",
-    "# X_train_scaled, X_val_scaled, X_test_scaled, y_train, y_val, y_test elsewhere.\n",
+    "csv_path = \"xy_cleaned.csv\"  # Make sure this file is in the same folder as the notebook\n",
     "\n",
-    "# Example assumes a CSV file with 'Y_rice' as target and the rest as features.\n",
-    "# COMMENT OUT this block if you already have the scaled splits in memory.\n",
+    "df = pd.read_csv(csv_path)\n",
+    "print(\"Original shape:\", df.shape)\n",
     "\n",
-    "csv_path = \"your_data.csv\"  # <- change this\n",
-    "try:\n",
-    "    df = pd.read_csv(csv_path)\n",
-    "    assert \"Y_rice\" in df.columns, \"Target column 'Y_rice' not found. Adjust the name.\"\n",
-    "    X = df.drop(columns=[\"Y_rice\"]).values.astype(np.float32)\n",
-    "    y = df[\"Y_rice\"].values.astype(np.float32)\n",
+    "target_col = \"Y_rice\"\n",
     "\n",
-    "    # Train/val/test split\n",
-    "    X_temp, X_test, y_temp, y_test = train_test_split(\n",
-    "        X, y, test_size=TEST_SIZE, random_state=RANDOM_STATE\n",
-    "    )\n",
-    "    val_ratio = VAL_SIZE / (1.0 - TEST_SIZE)\n",
-    "    X_train, X_val, y_train, y_val = train_test_split(\n",
-    "        X_temp, y_temp, test_size=val_ratio, random_state=RANDOM_STATE\n",
-    "    )\n",
+    "# 1) Drop rows where target is NaN\n",
+    "df = df.dropna(subset=[target_col]).copy()\n",
+    "print(\"After dropping NaN Y_rice rows:\", df.shape)\n",
     "\n",
-    "    # Scale features (fit on train only)\n",
-    "    scaler = StandardScaler()\n",
-    "    X_train_scaled = scaler.fit_transform(X_train)\n",
-    "    X_val_scaled   = scaler.transform(X_val)\n",
-    "    X_test_scaled  = scaler.transform(X_test)\n",
+    "# 2) Define feature columns: all except Y_* targets, but keep 'year' and yield features\n",
+    "feature_cols = [c for c in df.columns if c != target_col and not c.startswith(\"Y_\")]\n",
+    "print(\"Initial feature count:\", len(feature_cols))\n",
     "\n",
-    "    print(\"Data loaded from:\", csv_path)\n",
-    "    print(\"Shapes:\")\n",
-    "    print(\"X_train_scaled:\", X_train_scaled.shape)\n",
-    "    print(\"X_val_scaled:  \", X_val_scaled.shape)\n",
-    "    print(\"X_test_scaled: \", X_test_scaled.shape)\n",
-    "    print(\"y_train:\", y_train.shape, \"y_val:\", y_val.shape, \"y_test:\", y_test.shape)\n",
-    "except FileNotFoundError:\n",
-    "    print(\"\\n[!] CSV file not found at\", csv_path)\n",
-    "    print(\"If you already have X_train_scaled, X_val_scaled, X_test_scaled, y_train, y_val, y_test\")\n",
-    "    print(\"defined in your environment, you can ignore this block.\")"
+    "# 3) Drop columns with > 50% missing values\n",
+    "nan_counts = df[feature_cols].isna().sum()\n",
+    "missing_frac = nan_counts / len(df)\n",
+    "drop_cols = missing_frac[missing_frac > 0.5].index.tolist()\n",
+    "print(\"Dropping columns with >50% NaN:\", len(drop_cols))\n",
+    "\n",
+    "feature_cols_kept = [c for c in feature_cols if c not in drop_cols]\n",
+    "print(\"Remaining feature count:\", len(feature_cols_kept))\n",
+    "\n",
+    "X_raw = df[feature_cols_kept]\n",
+    "y = df[target_col].values.astype(np.float32)\n",
+    "\n",
+    "# 4) Impute remaining NaNs in features with median\n",
+    "imputer = SimpleImputer(strategy=\"median\")\n",
+    "X_imputed = imputer.fit_transform(X_raw)\n",
+    "\n",
+    "print(\"Any NaN in X_imputed:\", np.isnan(X_imputed).any())\n",
+    "print(\"Any NaN in y:\", np.isnan(y).any())\n",
+    "\n",
+    "print(\"X_imputed shape:\", X_imputed.shape)\n",
+    "print(\"y shape:\", y.shape)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "4fae2893",
+   "id": "32636c4b",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# === SANITY CHECKS ===\n",
+    "# === TRAIN / VAL / TEST SPLIT + SCALING ===\n",
+    "\n",
+    "X = X_imputed.astype(np.float32)\n",
+    "\n",
+    "# We want exact sizes: 3449 train, 570 val, 570 test (total 4589 rows)\n",
+    "n_total = X.shape[0]\n",
+    "print(\"Total rows after cleaning:\", n_total)\n",
+    "\n",
+    "# Compute fractions to match 570 / 4589\n",
+    "test_size = 570 / n_total\n",
+    "\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "\n",
+    "X_temp, X_test, y_temp, y_test = train_test_split(\n",
+    "    X, y, test_size=test_size, random_state=42\n",
+    ")\n",
+    "print(\"Test size:\", X_test.shape[0])\n",
+    "\n",
+    "val_size = 570 / X_temp.shape[0]\n",
+    "X_train, X_val, y_train, y_val = train_test_split(\n",
+    "    X_temp, y_temp, test_size=val_size, random_state=42\n",
+    ")\n",
+    "\n",
+    "print(\"Train size:\", X_train.shape[0])\n",
+    "print(\"Val size:\", X_val.shape[0])\n",
+    "print(\"Test size:\", X_test.shape[0])\n",
+    "\n",
+    "# Scale features\n",
+    "scaler = StandardScaler()\n",
+    "X_train_scaled = scaler.fit_transform(X_train)\n",
+    "X_val_scaled   = scaler.transform(X_val)\n",
+    "X_test_scaled  = scaler.transform(X_test)\n",
+    "\n",
     "def check_array(name, arr):\n",
     "    arr_np = np.array(arr)\n",
     "    print(f\"{name}: NaN={np.isnan(arr_np).any()}, inf={np.isinf(arr_np).any()}, \"\n",
@@ -112,6 +146,7 @@
     "    if arr_np.size > 0 and np.isfinite(arr_np).any():\n",
     "        print(f\"    min={np.nanmin(arr_np):.4f}, max={np.nanmax(arr_np):.4f}\")\n",
     "\n",
+    "print(\"\\n=== Sanity checks after scaling ===\")\n",
     "check_array(\"X_train_scaled\", X_train_scaled)\n",
     "check_array(\"X_val_scaled\",   X_val_scaled)\n",
     "check_array(\"X_test_scaled\",  X_test_scaled)\n",
@@ -123,11 +158,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "bbef8682",
+   "id": "3070db51",
    "metadata": {},
    "outputs": [],
    "source": [
     "# === TORCH DATASETS & DATALOADERS ===\n",
+    "\n",
     "X_train_t = torch.tensor(X_train_scaled, dtype=torch.float32)\n",
     "X_val_t   = torch.tensor(X_val_scaled,   dtype=torch.float32)\n",
     "X_test_t  = torch.tensor(X_test_scaled,  dtype=torch.float32)\n",
@@ -136,13 +172,15 @@
     "y_val_t   = torch.tensor(y_val,   dtype=torch.float32).view(-1, 1)\n",
     "y_test_t  = torch.tensor(y_test,  dtype=torch.float32).view(-1, 1)\n",
     "\n",
-    "# For LSTM, we treat each sample as sequence length 1: (batch, seq_len=1, input_size)\n",
+    "# For LSTM: treat each row as sequence length 1\n",
     "def make_seq(x):\n",
     "    return x.unsqueeze(1)  # (batch, 1, features)\n",
     "\n",
     "train_ds = TensorDataset(make_seq(X_train_t), y_train_t)\n",
     "val_ds   = TensorDataset(make_seq(X_val_t),   y_val_t)\n",
     "test_ds  = TensorDataset(make_seq(X_test_t),  y_test_t)\n",
+    "\n",
+    "BATCH_SIZE = 64\n",
     "\n",
     "train_loader = DataLoader(train_ds, batch_size=BATCH_SIZE, shuffle=True)\n",
     "val_loader   = DataLoader(val_ds,   batch_size=BATCH_SIZE, shuffle=False)\n",
@@ -155,11 +193,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "168c5c62",
+   "id": "2e00b542",
    "metadata": {},
    "outputs": [],
    "source": [
     "# === MODEL DEFINITION ===\n",
+    "\n",
     "class LSTMRegressor(nn.Module):\n",
     "    def __init__(self, input_size, hidden_size=64, num_layers=2, dropout=0.1):\n",
     "        super().__init__()\n",
@@ -175,7 +214,6 @@
     "    def forward(self, x):\n",
     "        # x: (batch, seq_len=1, input_size)\n",
     "        out, _ = self.lstm(x)\n",
-    "        # take last time step\n",
     "        last = out[:, -1, :]  # (batch, hidden_size)\n",
     "        out = self.fc(last)\n",
     "        return out\n",
@@ -190,13 +228,27 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "5e844d18",
+   "id": "ab1fc1aa",
    "metadata": {},
    "outputs": [],
    "source": [
     "# === TRAINING & EVALUATION UTILITIES ===\n",
+    "\n",
     "def rmse(y_true, y_pred):\n",
+    "    y_true = np.asarray(y_true, dtype=np.float64).ravel()\n",
+    "    y_pred = np.asarray(y_pred, dtype=np.float64).ravel()\n",
+    "\n",
+    "    print(\n",
+    "        \"RMSE debug -> \"\n",
+    "        f\"y_true NaN:{np.isnan(y_true).any()} Inf:{np.isinf(y_true).any()} | \"\n",
+    "        f\"y_pred NaN:{np.isnan(y_pred).any()} Inf:{np.isinf(y_pred).any()}\"\n",
+    "    )\n",
+    "\n",
+    "    if not np.all(np.isfinite(y_true)) or not np.all(np.isfinite(y_pred)):\n",
+    "        raise ValueError(\"Non-finite values in y_true / y_pred (NaN or Inf).\")\n",
+    "\n",
     "    return np.sqrt(mean_squared_error(y_true, y_pred))\n",
+    "\n",
     "\n",
     "def evaluate_model(model, data_loader):\n",
     "    model.eval()\n",
@@ -212,6 +264,7 @@
     "    preds = np.vstack(preds).ravel()\n",
     "    trues = np.vstack(trues).ravel()\n",
     "    return preds, trues\n",
+    "\n",
     "\n",
     "def train_model(\n",
     "    model,\n",
@@ -231,7 +284,6 @@
     "\n",
     "    for epoch in range(1, n_epochs + 1):\n",
     "        model.train()\n",
-    "        train_losses = []\n",
     "        for xb, yb in train_loader:\n",
     "            xb = xb.to(device)\n",
     "            yb = yb.to(device)\n",
@@ -239,18 +291,25 @@
     "            optimizer.zero_grad()\n",
     "            preds = model(xb)\n",
     "            loss = criterion(preds, yb)\n",
-    "            if torch.isnan(loss):\n",
-    "                print(f\"[Epoch {epoch}] NaN loss detected, breaking.\")\n",
+    "\n",
+    "            if torch.isnan(loss) or torch.isinf(loss):\n",
+    "                print(f\"[Epoch {epoch}] NaN/Inf loss detected, aborting training.\")\n",
     "                return history\n",
+    "\n",
     "            loss.backward()\n",
     "            if clip_norm is not None:\n",
     "                torch.nn.utils.clip_grad_norm_(model.parameters(), clip_norm)\n",
     "            optimizer.step()\n",
-    "            train_losses.append(loss.item())\n",
     "\n",
     "        # Evaluation\n",
     "        train_pred, train_true = evaluate_model(model, train_loader)\n",
     "        val_pred,   val_true   = evaluate_model(model, val_loader)\n",
+    "\n",
+    "        print(\n",
+    "            f\"[Epoch {epoch}] eval debug -> \"\n",
+    "            f\"train_pred NaN:{np.isnan(train_pred).any()} Inf:{np.isinf(train_pred).any()} | \"\n",
+    "            f\"val_pred NaN:{np.isnan(val_pred).any()} Inf:{np.isinf(val_pred).any()}\"\n",
+    "        )\n",
     "\n",
     "        train_rmse_val = rmse(train_true, train_pred)\n",
     "        val_rmse_val   = rmse(val_true, val_pred)\n",
@@ -274,11 +333,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "168849ab",
+   "id": "f3e469b2",
    "metadata": {},
    "outputs": [],
    "source": [
     "# === BASELINE LSTM TRAINING ===\n",
+    "\n",
     "BASE_HIDDEN_SIZE = 64\n",
     "BASE_NUM_LAYERS  = 2\n",
     "BASE_DROPOUT     = 0.1\n",
@@ -306,8 +366,14 @@
     "val_pred,  val_true  = evaluate_model(baseline_model, val_loader)\n",
     "test_pred, test_true = evaluate_model(baseline_model, test_loader)\n",
     "\n",
-    "baseline_val_rmse = rmse(val_true, val_pred)\n",
-    "baseline_val_r2   = r2_score(val_true, val_pred)\n",
+    "print(\"\\nFinal eval debug:\")\n",
+    "print(\"val_true NaN:\", np.isnan(val_true).any(), \"Inf:\", np.isinf(val_true).any())\n",
+    "print(\"val_pred NaN:\", np.isnan(val_pred).any(), \"Inf:\", np.isinf(val_pred).any())\n",
+    "print(\"test_true NaN:\", np.isnan(test_true).any(), \"Inf:\", np.isinf(test_true).any())\n",
+    "print(\"test_pred NaN:\", np.isnan(test_pred).any(), \"Inf:\", np.isinf(test_pred).any())\n",
+    "\n",
+    "baseline_val_rmse  = rmse(val_true,  val_pred)\n",
+    "baseline_val_r2    = r2_score(val_true,  val_pred)\n",
     "baseline_test_rmse = rmse(test_true, test_pred)\n",
     "baseline_test_r2   = r2_score(test_true, test_pred)\n",
     "\n",
@@ -319,11 +385,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "59fcf9c0",
+   "id": "cb3b0891",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# === PLOTS: LOSS CURVES (RMSE) ===\n",
+    "# === PLOTS: LOSS CURVES (RMSE & R²) ===\n",
+    "\n",
     "epochs = range(1, len(baseline_history[\"train_rmse\"]) + 1)\n",
     "\n",
     "plt.figure()\n",
@@ -338,8 +405,8 @@
     "plt.show()\n",
     "\n",
     "plt.figure()\n",
-    "plt.plot(epochs, baseline_history[\"train_r2\"], label=\"Train R2\")\n",
-    "plt.plot(epochs, baseline_history[\"val_r2\"],   label=\"Val R2\")\n",
+    "plt.plot(epochs, baseline_history[\"train_r2\"], label=\"Train R²\")\n",
+    "plt.plot(epochs, baseline_history[\"val_r2\"],   label=\"Val R²\")\n",
     "plt.xlabel(\"Epoch\")\n",
     "plt.ylabel(\"R²\")\n",
     "plt.title(\"LSTM Training vs Validation R²\")\n",
@@ -352,11 +419,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9c4fff0b",
+   "id": "6f50ac80",
    "metadata": {},
    "outputs": [],
    "source": [
     "# === PLOTS: TRUE vs PREDICTED ===\n",
+    "\n",
     "def plot_scatter(y_true, y_pred, title):\n",
     "    y_true = np.array(y_true).ravel()\n",
     "    y_pred = np.array(y_pred).ravel()\n",
@@ -380,11 +448,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "cf345d3c",
+   "id": "ade3c613",
    "metadata": {},
    "outputs": [],
    "source": [
     "# === OPTUNA HYPERPARAMETER TUNING (OPTIONAL) ===\n",
+    "\n",
     "if not OPTUNA_AVAILABLE:\n",
     "    print(\"Optuna not available, skipping tuning. Install with `pip install optuna`.\")\n",
     "else:\n",
@@ -412,7 +481,6 @@
     "            clip_norm=1.0,\n",
     "        )\n",
     "\n",
-    "        # use last val RMSE as objective\n",
     "        val_rmse_hist = history[\"val_rmse\"]\n",
     "        if len(val_rmse_hist) == 0:\n",
     "            return float(\"inf\")\n",
@@ -424,7 +492,6 @@
     "    print(\"\\nBest trial:\")\n",
     "    print(study.best_trial)\n",
     "\n",
-    "    # Retrain best model\n",
     "    best_params = study.best_trial.params\n",
     "    best_model, best_opt, best_crit = create_model(\n",
     "        hidden_size=best_params[\"hidden_size\"],\n",
@@ -458,11 +525,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b16028cb",
+   "id": "2da03ced",
    "metadata": {},
    "outputs": [],
    "source": [
     "# === PERFORMANCE COMPARISON & OPTUNA VISUALIZATION ===\n",
+    "\n",
     "results = []\n",
     "\n",
     "results.append({\n",
@@ -474,8 +542,8 @@
     "})\n",
     "\n",
     "# If you have metrics from your initial feed-forward NN, put them here:\n",
-    "# initial_nn_val_rmse = ...\n",
-    "# initial_nn_val_r2   = ...\n",
+    "# initial_nn_val_rmse  = ...\n",
+    "# initial_nn_val_r2    = ...\n",
     "# initial_nn_test_rmse = ...\n",
     "# initial_nn_test_r2   = ...\n",
     "# results.append({\n",
@@ -498,7 +566,7 @@
     "results_df = pd.DataFrame(results)\n",
     "print(results_df)\n",
     "\n",
-    "# Bar plots for RMSE and R2 comparison\n",
+    "# Bar plots for RMSE and R² comparison\n",
     "plt.figure()\n",
     "plt.bar(results_df[\"Model\"], results_df[\"Val_RMSE\"])\n",
     "plt.ylabel(\"Val RMSE\")\n",
@@ -519,10 +587,8 @@
     "if OPTUNA_AVAILABLE and 'study' in globals():\n",
     "    try:\n",
     "        from optuna.visualization import plot_optimization_history, plot_param_importances\n",
-    "\n",
     "        fig1 = plot_optimization_history(study)\n",
     "        fig1.show()\n",
-    "\n",
     "        fig2 = plot_param_importances(study)\n",
     "        fig2.show()\n",
     "    except Exception as e:\n",
