--- a/Part_2_EDA.ipynb
+++ b/Part_2_EDA.ipynb
@@ -5,14 +5,7 @@
    "id": "7574ed35",
    "metadata": {},
    "source": [
-    "# Exploratory Data Analysis (Part 2)\n",
-    "\n",
-    "## Objective\n",
-    "This notebook explores the cleaned datasets generated in Part 1:\n",
-    "1. **`label_yield.parquet`**: Annual crop yield data.\n",
-    "2. **`nasa_df.parquet`**: Monthly weather data (Rain, Solar Radiation, Temperature).\n",
-    "\n",
-    "We aim to understand the data distributions, trends over time, and the relationship between weather variables and crop yields, with a specific focus on **Cereals (Barley, Wheat, Rice, and Maize/Corn)**."
+    "# Exploratory Data Analysis"
    ]
   },
   {
