--- a/Part_3_PrepFeature.ipynb
+++ b/Part_3_PrepFeature.ipynb
@@ -4,15 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Part 3: Feature Engineering & Data Prep\n",
-    "\n",
-    "## Goal\n",
-    "In this notebook, I'm building the final dataset for the machine learning model. The idea is to create \"features\" that help predict crop yield.\n",
-    "\n",
-    "I'm going to create three main types of features:\n",
-    "1.  **Historical Yields (Lags):** Looking at how well the crop did in previous years (1, 3, and 5-year averages).\n",
-    "2.  **Weather Cycles:** Instead of just average temperatures, I'll use Sine and Cosine functions to capture seasonal patterns (Winter, Spring, etc.) better.\n",
-    "3.  **Farming Info & Location:** Adding data on fertilizers, pesticides, and GPS coordinates."
+    "# Feature Engineering & Data Prep"
    ]
   },
   {
