--- a/Part_4_PrepLabel.ipynb
+++ b/Part_4_PrepLabel.ipynb
@@ -4,16 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Part 4: Preparing the Target Labels\n",
-    "\n",
-    "## Goal\n",
-    "This is the final step of data preparation. In Part 3, I created the \"Features\" (the inputs). Now, I need to format the \"Labels\" (the crop yields we want to predict).\n",
-    "\n",
-    "Here is the plan:\n",
-    "1.  **Load** the features and the raw yield data.\n",
-    "2.  **Pivot** the yield data so that each crop gets its own column (e.g., `Y_rice`, `Y_wheat`).\n",
-    "3.  **Merge** the Features (X) and Labels (Y) into one final dataset.\n",
-    "4.  **Save** everything so it's ready for the Machine Learning model."
+    "# Preparing the Target Labels"
    ]
   },
   {
